generate HTTP client from swagger files
